k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aiops-service
spec:
  selector:
    app: aiops-app
  ports:
    - name: model-serving
      protocol: TCP
      port: 8501
      targetPort: 8501
    - name: vector-database
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
